# pcp

./: .cirrus.yml  .coderabbit.yaml  .dbpmdarc  .dir-locals.el  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .pylintrc  .travis.yml  000  001  001.out  002  003  003.out  004  005  006  006.out  006.out.2  007  007.full.ok  007.out  008  008.out.Colleens-iMac  008.out.bozo  008.out.bozo-laptop  008.out.canary  008.out.comma  008.out.edge  008.out.groan  008.out.kenj-pc  008.out.kmcdonell-laptop  008.out.liz  008.out.ppp-kenmcd  009  010  010.out  (+1301 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
PCP_PG/: PCP_PG.sgml  book.sgm  booklist.txt  chap01.sgml  chap02.sgml  chap03.sgml  chap04.sgml  chapA.sgml  preface.sgml  programmer-guide.xml
PCP_UAG/: PCP_LinuxUAG.sgml  README  book.sgm  booklist.txt  ch01.sgml  ch02.sgml  ch03.sgml  ch04.sgml  ch05.sgml  ch06.sgml  ch07.sgml  ch08.sgml  ch09.sgml  chA.sgml  oview-tool.sgml  preface.sgml
blinkenlights/: blinkenlights.css  blinkenlights.js  index.html
books/: .gitignore  GNUmakefile  README
checklist/: checklist.js  checklist.json  checklist.sh  index.html  jquery-1.7.2.js  jquery-ui-1.10.2.js  jquery-ui-themes-1.10.2
ci-qa/: .gitignore  README  cleanup  update
cisco/: ATM-12-0  Ethernet-0  Ethernet-1-0  Ethernet-3-5  FastEthernet-0-5  FastEthernet-0-6  FastEthernet-1-0  Fddi-2-0  Vlan-256
debian/: .gitignore  GNUmakefile  README.Debian  changelog  checkconf  cleantmpdirs  configversions  control  control.master  control.pcp  control.pcp2arrow  control.pcp2xlsx  control.pcpgui  control.perl  control.pmdaib  control.python2  control.python3  control.ubuntu  control.vector  control.webapi  copyright  cull_old_conffiles  doc-base  files  fixcontrol  fixcontrol.master  fixrules  fixsysusers  libpcp-archive1-dev.install  libpcp-archive1.install  libpcp-gui1-dev.install  libpcp-gui1.install  libpcp-gui2-dev.install  libpcp-gui2.install  libpcp-import1-dev.install  libpcp-import1.install  libpcp-import2.install  libpcp-json1-dev.install  libpcp-json1.install  libpcp-mmv1-dev.install  (+100 more)
doc/: .gitignore  CHANGES  COPYING  GNUmakefile  INSTALL  PORTING
docs/: conf.py  index.rst  pcp-programmers-guide.rst  pcp-users-and-administrators-guide.rst  refs.rst  requirements.txt
examples/: async-libuv.c  cluster-clientside-caching-async.c
examples/src/: CMakeLists.txt  example.c
grafana/: NOTICE.md  PATCH-1  build.txt  checklist.css  config.js  config.sample.js  index.html
grafana-1.9.1/: build.txt  config.js  index.html
html/: GNUmakefile  guide.html  howto.diskmodel.html  howto.enterprise.html  installation.html  lab.containers.html  lab.importdata.html  lab.secureclient.html  overview.html  pcpdoc.css
images/: .gitignore  GNUmakefile  Makefile  back_archive.xpm  back_off.xpm  back_on.xpm  fastback_archive.xpm  fastback_off.xpm  (+37 more)
src/pmwebapi/libmicrohttpd-0.9.23/: AUTHORS  ChangeLog  MHD_config.h.in  Makefile.in  README  acinclude.m4  aclocal.m4  configure  configure.ac
src/pmwebapi/libmicrohttpd-0.9.23/contrib/: Makefile.am  Makefile.in
src/pmwebapi/libmicrohttpd-0.9.23/doc/: Doxyfile  Makefile.am  Makefile.in  libmicrohttpd-tutorial.info  libmicrohttpd-tutorial.texi  libmicrohttpd.3  libmicrohttpd.info  libmicrohttpd.texi  version.texi
src/pmwebapi/libmicrohttpd-0.9.23/m4/: Makefile.am  Makefile.in
src/pmwebapi/libmicrohttpd-0.9.23/src/: Makefile.in
src/pmwebapi/libmicrohttpd-0.9.23/src/daemon/: EXPORT.sym  Makefile.am  Makefile.in  base64.c  base64.h  basicauth.c  connection.c  connection.h  connection_https.c  connection_https.h  daemon.c  daemon_test.c  digestauth.c  internal.c  internal.h  md5.c  md5.h  memorypool.c  postprocessor.c  reason_phrase.c  response.c  tsearch.c  tsearch.h
src/pmwebapi/libmicrohttpd-0.9.23/src/examples/: Makefile.am  Makefile.in  authorization_example.c  digest_auth_example.c  dual_stack_example.c  fileserver_example.c  fileserver_example_dirs.c  fileserver_example_external_select.c  https_fileserver_example.c  minimal_example.c  minimal_example_comet.c  post_example.c  querystring_example.c  refuse_post_example.c
src/pmwebapi/libmicrohttpd-0.9.23/src/include/: Makefile.am  Makefile.in  microhttpd.h  platform.h
src/pmwebapi/libmicrohttpd-0.9.23/src/include/plibc/: Makefile.am  Makefile.in  plibc.h
src/pmwebapi/libmicrohttpd-0.9.23/src/testcurl/: Makefile.am  Makefile.in  curl_version_check.c  daemon_options_test.c  daemontest_digestauth.c  daemontest_digestauth_with_arguments.c  daemontest_get.c  daemontest_get_chunked.c  daemontest_get_response_cleanup.c  daemontest_get_sendfile.c  daemontest_iplimit.c  daemontest_large_put.c  daemontest_long_header.c  daemontest_parse_cookies.c  daemontest_post.c  daemontest_post_loop.c  daemontest_postform.c  daemontest_process_arguments.c  daemontest_process_headers.c  daemontest_put.c  daemontest_put_chunked.c  daemontest_termination.c  daemontest_timeout.c  daemontest_urlparse.c  gauger.h  perf_get.c  perf_get_concurrent.c  test_callback.c  test_start_stop.c
src/pmwebapi/libmicrohttpd-0.9.23/src/testcurl/https/: Makefile.am  Makefile.in  mhds_get_test.c  mhds_get_test_select.c  mhds_multi_daemon_test.c  mhds_session_info_test.c  tls_authentication_test.c  tls_daemon_options_test.c  tls_multi_thread_mode_test.c  tls_session_time_out_test.c  tls_test_common.c  tls_test_common.h  tls_thread_mode_test.c
src/pmwebapi/libmicrohttpd-0.9.23/src/testzzuf/: Makefile.am  Makefile.in  daemontest_get.c  daemontest_get_chunked.c  daemontest_large_put.c  daemontest_long_header.c  daemontest_post.c  daemontest_postform.c  daemontest_put.c  daemontest_put_chunked.c
src/python/: .gitignore  GNUmakefile  Hints  README.rst  compat-setup.py  distutils-setup.py  install-dev  mmv.c  pcp.py  pcpi.py  pm-collectl.py  pm-extractl.py  pmapi.c  pmapi.py  pmda.c  pmgui.c  pmi.c  py-pmapi.c  pyproject.toml  setup.py  test_pcp.py
src/python/pcp/: .gitignore  GNUmakefile  __init__.py  fixup  mmv.py  pcp.py  pmapi.c  pmapi.py  pmapi.py.in  pmcc.py  pmconfig.py  pmda.py  pmgui.py  pmi.py  pmsubsys.py
src/python/test/: pmerr_test.py
(+13081 files in other folders)
